# learning-haskell

./: .ghci  .gitignore  README.md  learning-haskell.cabal  stack.yaml
src/: Actions.hs  IRC.hs  Main.hs  test.txt
